<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/personal_style_detail_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rang1"
    tools:context=".style_zone.activity.detail.PersonalStyleDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_personal_style_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#272727"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_personal_style_detail"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager_images_detail"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/dotsLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tabIndicatorHeight="0dp"
                app:tabSelectedTextColor="@android:color/white"
                app:tabTextColor="@android:color/darker_gray"
                app:tabIndicator="@null"
                app:tabGravity="center"
                app:tabMode="fixed"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/viewPager_images_detail"
                />


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/style_detail_avatar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:background="@color/rang1"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_wallpaper"
                android:layout_marginTop="15dp"
                android:padding="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewPager_images_detail"
                app:shapeAppearanceOverlay="@style/avatarThemes"
                app:strokeColor="#9E9E9E"
                app:strokeWidth="1dp" />

            <TextView
                android:id="@+id/style_detail_user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:maxLines="1"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="@+id/style_detail_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/style_detail_avatar"
                app:layout_constraintTop_toTopOf="@+id/style_detail_avatar" />

            <TextView
                android:id="@+id/style_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/style_detail_avatar" />

            <TextView
                android:id="@+id/style_detail_support_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/support_device"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/style_detail_description" />

            <TextView
                android:id="@+id/style_detail_support"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#FF56E6"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@id/style_detail_support_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/style_detail_support_text" />

            <TextView
                android:id="@+id/theme_link_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme_s_link"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:visibility="gone"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/style_detail_support"/>
            <TextView
                android:id="@+id/theme_link"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:clickable="true"
                android:focusable="true"
                android:linksClickable="true"
                android:autoLink="web"
                android:textColor="#03A9F4"
                android:textSize="16sp"
                android:visibility="gone"
                android:textIsSelectable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/theme_link_text"
                app:layout_constraintTop_toTopOf="@+id/theme_link_text" />

            <TextView
                android:id="@+id/first_wallpaper_link_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_wallpaper_s_link"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:visibility="gone"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/theme_link"/>

            <TextView
                android:id="@+id/first_wallpaper_link"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:clickable="true"
                android:focusable="true"
                android:linksClickable="true"
                android:autoLink="web"
                android:textColor="#03A9F4"
                android:textSize="16sp"
                android:visibility="gone"
                android:textIsSelectable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/first_wallpaper_link_text"
                app:layout_constraintTop_toTopOf="@+id/first_wallpaper_link_text" />

            <TextView
                android:id="@+id/second_wallpaper_link_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_wallpaper_s_link"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:visibility="gone"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_wallpaper_link"/>

            <TextView
                android:id="@+id/second_wallpaper_link"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:clickable="true"
                android:focusable="true"
                android:linksClickable="true"
                android:autoLink="web"
                android:textColor="#03A9F4"
                android:textSize="16sp"
                android:visibility="gone"
                android:textIsSelectable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/second_wallpaper_link_text"
                app:layout_constraintTop_toTopOf="@+id/second_wallpaper_link_text" />

            <TextView
                android:id="@+id/icon_link_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_s_link"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:visibility="gone"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/second_wallpaper_link"/>

            <TextView
                android:id="@+id/icon_link"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:clickable="true"
                android:focusable="true"
                android:linksClickable="true"
                android:autoLink="web"
                android:textSize="16sp"
                android:visibility="gone"
                android:textIsSelectable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/icon_link_text"
                app:layout_constraintTop_toTopOf="@+id/icon_link_text" />

            <TextView
                android:id="@+id/font_link_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/font_s_link"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:visibility="gone"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon_link"/>

            <TextView
                android:id="@+id/font_link"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:clickable="true"
                android:focusable="true"
                android:linksClickable="true"
                android:autoLink="web"
                android:visibility="gone"
                android:textIsSelectable="true"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/font_link_text"
                app:layout_constraintTop_toTopOf="@+id/font_link_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>